objects/Section_ReportingPeriod__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this reporting period for this section completed?</description>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Weighting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Weighting</label>
        <referenceTo>Course_Weightings__c</referenceTo>
        <relationshipLabel>Section/ReportingPeriod</relationshipLabel>
        <relationshipName>Section_ReportingPeriod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Time_Parent_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Time Parent Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_periods__c</fullName>
        <label>Number of periods</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceId__c</fullName>
        <externalId>true</externalId>
        <label>ReferenceId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Scheduler_ReferenceId__c</fullName>
        <label>Scheduler ReferenceId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Number_Of_Periods__c</fullName>
        <formula>TEXT(Section__r.Number_of_Periods__c)</formula>
        <label>Section Number Of Periods</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Reporting_Period__c</fullName>
        <formula>CASESAFEID(Section__r.Reporting_Period__c)</formula>
        <label>Section Reporting Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Section/ReportingPeriod</relationshipLabel>
        <relationshipName>Section_ReportingPeriod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Parent_Picklist_Name__c</fullName>
        <formula>Time__r.Parent_Time_Element__r.Picklist_Value__r.Name</formula>
        <label>Time Parent Picklist Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Section/ReportingPeriod</relationshipLabel>
        <relationshipName>Section_ReportingPeriod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Section/ReportingPeriod</label>
    <listViews>
        <fullName>All_Unique</fullName>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Section/ReportingPeriod</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section/ReportingPeriod</pluralLabel>
    <recordTypes>
        <fullName>Published</fullName>
        <active>true</active>
        <label>Published</label>
    </recordTypes>
    <recordTypes>
        <fullName>UnPublished</fullName>
        <active>true</active>
        <label>Unpublished</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>