objects/Section_ReportingPeriod__c/listViews/All_Unique.listView-meta.xml
<ListView>
    <fullName>All_Unique</fullName>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>